testcases/bad/void_dispatch.cl
class Main{
    x:Object;
    main() : Object {
        x.abort()
    };
};